--- a/app/views/shared/_condition_fields.html.erb
+++ b/app/views/shared/_condition_fields.html.erb
@@ -1,10 +1,18 @@
-<div class="field">
+<div class="field row">
+  <div class="col-md-12">
   <%= f.attribute_fields do |a| %>
-    <%= a.attribute_select associations: [:branch,:status,:contact_type] %>
+    <div class="col-sm-2">
+      <%= a.attribute_select({associations: [:branch,:status,:contact_type]},{class: "form-control"}) %>
+    </div>
   <% end %>
-  <%= f.predicate_select compounds: false %>
+  <div class="col-sm-3">
+    <%= f.predicate_select({compounds: false},{class: "form-control"}) %>
+  </div>
   <%= f.value_fields do |v| %>
-    <%= v.text_field :value %>
+    <div class="col-sm-4">
+    <%= v.text_field :value,{class: "form-control"} %>
+    </div>
   <% end %>
-  <%= link_to "remove", '#', class: "remove_fields" %>
+  <span class="remove_fields glyphicon glyphicon-remove col-sm-3"></span>
+  </div>
 </div>
