--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,8 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700);
-html,
+html {
+  position: relative;
+  min-height: 100%; }
+
 body {
-  height: 100%;
-  /* The html and body elements cannot have any padding or margin. */ }
+  min-width: 970px;
+  margin-bottom: 50px; }
 
 .block {
   display: block; }
@@ -10,23 +13,14 @@ body {
 .form-last {
   margin-bottom: 0; }
 
-/* Wrapper for page content to push down footer */
-#wrap {
-  position: relative;
-  min-height: 100%;
-  margin-top: -70px;
-  margin-bottom: -50px; }
-  #wrap:after {
-    content: "";
-    display: block;
-    height: 70px; }
-  #wrap:before {
-    content: "";
-    display: block;
-    height: 70px; }
+.first {
+  padding-left: 0; }
 
 /* Set the fixed height of the footer here */
 #footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 50px;
   background-color: #A9DEF0; }
   #footer p {
@@ -43,17 +37,31 @@ body {
   #header .profile {
     padding-top: 1rem; }
 
-.main .left-nav {
-  position: absolute;
-  top: 70px;
-  bottom: 50px;
-  padding-top: 2rem;
+.container {
+  width: 970px;
+  position: relative;
+  max-width: none !important;
+  padding-left: 0;
   padding-right: 0;
-  border-right: 1px solid #dddddd; }
+  height: 100%; }
+
+.main .left-nav {
+  padding-right: 0;
+  padding-top: 1rem; }
   .main .left-nav li.active a, .main .left-nav li.active a:hover, .main .left-nav li.active a:focus {
     background-color: #004156; }
   .main .left-nav a {
     color: #004156; }
+  .main .left-nav hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem; }
+.main .v-line {
+  position: absolute;
+  left: -10px;
+  z-index: -1;
+  height: 100%;
+  bottom: 70px;
+  border-right: 1px solid #dddddd; }
 .main .main-content {
   padding-top: 2rem; }
   .main .main-content h3 {
@@ -65,6 +73,10 @@ body {
     margin-top: 0; }
   .main .main-content .row-right {
     margin-right: 0; }
+  .main .main-content .mt-15 {
+    margin-top: 15px; }
+  .main .main-content .mr-10 {
+    margin-right: 10px; }
   .main .main-content .form-heading {
     margin-top: 0;
     margin-bottom: 15px; }
@@ -84,18 +96,25 @@ body {
     background-color: yellow; }
   .main .main-content .badge {
     color: #000000; }
+  .main .main-content .pointer {
+    cursor: pointer; }
+  .main .main-content .filter-well {
+    background-color: #FFE9B4; }
   .main .main-content .add-todo {
     display: none; }
-    .main .main-content .add-todo .to-do .well {
-      margin-bottom: 10px; }
-    .main .main-content .add-todo .to-do .overdue .todo-date {
-      color: red; }
-    .main .main-content .add-todo .to-do .overdue .well {
-      border: 1px solid red; }
-    .main .main-content .add-todo .to-do .complete {
-      color: #aaaaaa; }
-      .main .main-content .add-todo .to-do .complete .todo-text {
-        text-decoration: line-through; }
+  .main .main-content .to-do .well {
+    margin-bottom: 10px; }
+  .main .main-content .to-do .todo-head {
+    display: inline-block;
+    padding-bottom: 5px; }
+  .main .main-content .to-do .overdue .todo-date {
+    color: red; }
+  .main .main-content .to-do .overdue .well {
+    border: 1px solid red; }
+  .main .main-content .to-do .complete {
+    color: #aaaaaa; }
+    .main .main-content .to-do .complete .todo-text {
+      text-decoration: line-through; }
   .main .main-content .data-table .well {
     padding-left: 0; }
   .main .main-content .data-table .form-control {
@@ -110,7 +129,7 @@ body {
     top: 3px;
     cursor: pointer; }
   .main .main-content .data-table .filter-center {
-    padding-left: 10%; }
+    padding-left: 25px; }
   .main .main-content .new-enq-reg .progress {
     margin-top: 7px; }
   .main .main-content .new-enq-reg .btn-next {
@@ -124,6 +143,11 @@ body {
     border-bottom: 1px solid #E8E8E8; }
   .main .main-content .new-enq-reg .glyphicon-remove {
     margin-right: 0; }
+  .main .main-content .new-enq-reg .new-program {
+    margin-left: -19px;
+    margin-right: -19px;
+    background-color: #FFFFFF;
+    padding-top: 15px; }
   .main .main-content .form-control.hor-first {
     margin: 0; }
   .main .main-content .theme-color {
@@ -155,8 +179,6 @@ body {
       background-color: #3f6d00; }
     .main .main-content .theme-color .active {
       border: 7px solid #999999; }
-  .main .main-content .filter-well {
-    background-color: #FFE9B4; }
 
 .glyphicon {
   margin-right: 1rem; }
