--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -2,17 +2,17 @@
                       <h4 class="form-heading">Personal Information</h4>
                       <br/>
                       <div class="row row-top">
-                      
+
                         <% %w(first_name surname mobile1 mobile2 email1 email2).each do |el| %>
-                        
-                        <%= bs(f,el,"text_field",[nil,4],8,6) %>
-                        
+
+                        <%= bs(f,el,"text_field",[nil,4],7,6) %>
+
                         <% end %>
-                        
-                        <div class="col-md-6">
+
+                        <div class="col-xs-6">
                           <div class="form-group">
-                            <label class="control-label col-sm-4">Gender</label>
-                            <div class="col-sm-8">
+                            <label class="control-label col-xs-4">Gender</label>
+                            <div class="col-xs-7">
                               <% {male: 'm', female: 'f'}.each do |i| %>
                                 <%= f.radio_button :gender, i[1] %>
                                 <%= f.label i[0].to_s.strip %>
@@ -20,34 +20,34 @@
                             </div>
                           </div>
                         </div>
-                        
-                        <%= bs(f,["date_of_birth",{class: "datepicker"}],"text_field",[nil,4],8,6) %>
-                        
-                        <%= bs(f,[:country_id,Country.order(:name), 
-                                              :id, 
+
+                        <%= bs(f,["date_of_birth",{class: "datepicker"}],"text_field",[nil,4],7,6) %>
+
+                        <%= bs(f,[:country_id,Country.order(:name),
+                                              :id,
                                               :name,
                                               {prompt: "-country-"},{}],
                                               "collection_select",
-                                              [nil,4],8,6) %>
-                                              
-                        <%= bs(f,[:assigned_to,User.order(:first_name), 
-                                              :id, 
+                                              [nil,4],7,6) %>
+
+                        <%= bs(f,[:assigned_to,User.order(:first_name),
+                                              :id,
                                               :first_name,
                                               {prompt: "-assign to-"},{}],
                                               "collection_select",
-                                              ["Assign To",4],8,6) %>
-                                              
-                        <%= bs(f,[:source_id,StudentSource.order(:name), 
-                                              :id, 
+                                              ["Assign To",4],7,6) %>
+
+                        <%= bs(f,[:source_id,StudentSource.order(:name),
+                                              :id,
                                               :name,
                                               {prompt: "-student source-"},{}],
                                               "collection_select",
-                                              [nil,4],8,6) %>
-                        
-                        <div class="col-md-6">
+                                              [nil,4],7,6) %>
+
+                        <div class="col-xs-6">
                           <div class="form-group">
-                            <label class="control-label col-sm-4">Score</label>
-                            <div class="col-sm-8">
+                            <label class="control-label col-xs-4">Score</label>
+                            <div class="col-xs-7">
                               <%= f.select(:score,
                                            options_for_select((1..10),5),
                                            {},
@@ -55,21 +55,21 @@
                             </div>
                           </div>
                         </div>
-                        
-                        <%= bs(f,[:contact_type_id,ContactType.order(:name), 
-                                              :id, 
+
+                        <%= bs(f,[:contact_type_id,ContactType.order(:name),
+                                              :id,
                                               :name,
                                               {prompt: "-contact type-"},{}],
                                               "collection_select",
-                                              [nil,4],8,6) %>
-                        
-                        <%= bs(f,[:branch_id,Branch.order(:name), 
-                                              :id, 
+                                              [nil,4],7,6) %>
+
+                        <%= bs(f,[:branch_id,Branch.order(:name),
+                                              :id,
                                               :name,
                                               {prompt: "-branch-"},{}],
                                               "collection_select",
-                                              ["Branch",4],8,6) %>
+                                              ["Branch",4],7,6) %>
 
                     </div>
-                        
-                     
+
+
