--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -2,12 +2,12 @@
 $(function(){
 
     $(document).on('nested:fieldAdded', function(event){
-      var field = event.field; 
+      var field = event.field;
       var dateField = field.find('.dateField');
       dateField.datepicker({
         inline: true,
-        changeMonth: true, 
-        changeYear: true, 
+        changeMonth: true,
+        changeYear: true,
         dateFormat: "yy-mm-dd",
         yearRange: '1980:2050' });
       setColorsFromSession();
@@ -16,22 +16,22 @@ $(function(){
 });
 </script>
 
-        
+<div class="row row-top new-program">
     <div id="object_name" data-obj='<%= parent %>'>
     </div>
-    
+
      <!-- array of styles corresponding to [0]course_subject_text_div, [1]course_subject, [2]application_status, [3]ins_ref_no calling the array as sty (i.e styles) -->
        <% if parent == "enquiry" %>
          <% sty = ['','none','none','display:none;'] %>
        <% elsif parent == "registration" %>
          <% sty = ['display:none;',nil,nil,''] %>
        <% end %>
- 
+
        <% p_type_show = (p.object.programme_type.name == "language_school" rescue nil) ? "display:none;" : "display:block;" %>
 
        <% good_country = Country.includes(:institutions).where("institutions.id is not null").order("countries.name") %>
-               <%= bs(p,[:country_id,good_country, 
-                                              :id, 
+               <%= bs(p,[:country_id,good_country,
+                                              :id,
                                               :name,
                                               {prompt: "-country-"},
                                               {class: "countries_select",
@@ -39,26 +39,26 @@ $(function(){
                                                        '_programmes_attributes_index_city_id',
                                                        '/get_cities/');"}],
                                               "collection_select",
-                                              [nil,4],8,6) %>
+                                              [nil,4],7,6) %>
             <!-- Setting the default selected city as the programmes city if chosen in the enquiry -->
                 <% one = p.object.city_id %>
                 <% two = one.blank? ? [] : City.where(id: one) %>
-                
+
                 <%= bs(p,[:city_id,
-                          two, 
-                          :id, 
+                          two,
+                          :id,
                           :name,
                           {prompt: "-city-"},
                           {class: "cities_select",
                           onchange: "setInsTypeData(this,'.institution_type_select');
-                                     $('.institution_type_select').fadeOut(1000); 
+                                     $('.institution_type_select').fadeOut(1000);
                                      $('.institution_type_select').fadeIn(1000);"}],
                            "collection_select",
-                           [nil,4],8,6) %>
-                           
+                           [nil,4],7,6) %>
+
                 <%= bs(p,[:type_id,
-                          InstitutionType.edu, 
-                          :id, 
+                          InstitutionType.edu,
+                          :id,
                           :name,
                           {prompt: "-institution type-"},
                           {class: "institution_type_select",
@@ -66,74 +66,73 @@ $(function(){
                                                     changeInsType(this,
                                                     '_programmes_attributes_index_institution_id');" }],
                            "collection_select",
-                           [nil,4],8,6) %>
+                           [nil,4],7,6) %>
 
                 <% four = p.object.institution_id %>
                 <% five = four.blank? ? [] : Institution.where(id: four) %>
-                
+
                 <%= bs(p,[:institution_id,
-                          five, 
-                          :id, 
+                          five,
+                          :id,
                           :name,
                           {prompt: "-institution-"},
                           {class: "institutions_select",
                            onchange: "validateRecruit(this);"}],
                            "collection_select",
-                           [nil,4],8,6) %>
-                
-                <div class="col-md-6">
+                           [nil,4],7,6) %>
+
+                <div class="col-xs-6">
                     <div class="form-group">
-                      <%= label_tag :start_date,nil,{class: 'control-label col-sm-4'} %>
-                      <div class="col-sm-8">
+                      <%= label_tag :start_date,nil,{class: 'control-label col-xs-4'} %>
+                      <div class="col-xs-7">
                         <%= p.text_field :start_date,{class: 'form-control datepicker'} %>
                       </div>
                     </div>
                 </div>
-                
-                <div class="col-md-6">
+
+                <div class="col-xs-6">
                     <div class="form-group end_date_div">
-                      <%= label_tag :end_date,nil,{class: 'control-label col-sm-4'} %>
-                      <div class="col-sm-8">
+                      <%= label_tag :end_date,nil,{class: 'control-label col-xs-4'} %>
+                      <div class="col-xs-7">
                         <%= p.text_field :end_date,{class: 'form-control datepicker'} %>
                       </div>
                     </div>
                 </div>
-                
-                
-               <div class="col-md-6">
+
+
+               <div class="col-xs-6">
                     <div class="form-group course_subject_text_div">
-                      <%= label_tag :course_subject,nil,{class: 'control-label col-sm-4'} %>
-                      <div class="col-sm-8">
+                      <%= label_tag :course_subject,nil,{class: 'control-label col-xs-4'} %>
+                      <div class="col-xs-7">
                         <%= p.text_field :course_subject_text,{class: 'form-control datepicker'} %>
                       </div>
                     </div>
                </div>
-               
+
                <%= bs(p,[:level_id,
-                          CourseLevel.order(:name), 
-                          :id, 
+                          CourseLevel.order(:name),
+                          :id,
                           :name,
                           {prompt: "-course level-"},{}],
                            "collection_select",
-                           [nil,4],8,"6 course_level_div 'style=#{p_type_show}'") %>
+                           [nil,4],7,"6 course_level_div 'style=#{p_type_show}'") %>
 
               <%= bs(p,[:subject_id,
-                        CourseSubject.order(:name), 
-                        :id, 
+                        CourseSubject.order(:name),
+                        :id,
                         :name,
                         {prompt: "-course subject-"},{}],
                          "collection_select",
-                         [nil,4],8,"6 course_subject_div 'style=display:#{sty[1]};") %>
+                         [nil,4],7,"6 course_subject_div 'style=display:#{sty[1]};") %>
 
               <%= bs(p,[:app_status_id,
-                        ApplicationStatus.order(:name), 
-                        :id, 
+                        ApplicationStatus.order(:name),
+                        :id,
                         :name,
                         {prompt: "-application status-"},{}],
                          "collection_select",
-                         [nil,4],8,"6 application_status_div 'style=display:#{sty[2]};") %>
-                         
-              <%= bs(p,:ins_ref_no,"text_field",[nil,4],8,"6 ins_ref_no 'style=#{sty[3]};") %>
+                         [nil,4],7,"6 application_status_div 'style=display:#{sty[2]};") %>
 
+              <%= bs(p,:ins_ref_no,"text_field",[nil,4],7,"6 ins_ref_no 'style=#{sty[3]};") %>
 
-
+</div>
