--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -4,9 +4,9 @@
                 <h3>New Enquiry</h3>
               </div>
             </div>
-           
+
             <div class="new-enq-reg">
-              
+
               <div class="row">
                 <div class="col-md-12">
                   <div class="well">
@@ -24,28 +24,28 @@
                           <% end %>
  <!-- Assigning the current_user's id to assigned_by and passing with the form as hidden input -->
                       <%= f.hidden_field :assigned_by, :value => current_user.id.to_s %>
-                      
+
                       <!-- rendering the partial enquiry_information that captures personal info of an enquiry by passing the form object f -->
                       <%= render 'enquiry_information', :f => f %>
                       <br/>
                       <%= render 'preferred_countries', :f => f %>
                       <br/>
                       <%= render 'preferred_programmes', :f => f %>
-                      
-                      
 
-                      <div class="row row-top">
-                        <div class="text-center">
+                      <div class="row row-top mt-15">
+                        <div class="col-xs-12">
                           <div class="form-group form-last">
+                            <div class="col-xs-10 col-xs-offset-2">
                             <%= f.submit "Save",{class: "btn btn-primary"} %>
-                            <%= f.submit "Save and New",{class: "btn btn-primary", 
+                            <%= f.submit "Save and New",{class: "btn btn-primary",
                                                    name: 'save_new'} %>
+                           </div>
                           </div>
                         </div>
                       </div>
-                      
-                      
-                      
+
+
+
                    <% end %>
                   </div>
                 </div>
@@ -54,6 +54,6 @@
 
 <script>
 
- actmm('enquiries'); 
+ actmm('enquiries');
 
 </script>
