--- a/app/views/todos/_show.html.erb
+++ b/app/views/todos/_show.html.erb
@@ -2,17 +2,17 @@
 <% if @todos.any? %>
 <% a = @todos.group_by(&:topic) %>
 <% a.keys.each do |k| %>
-           <h4 class="col-md-4"><%= k.name.titleize %> todos</h4>
+           <h4 class="col-xs-4 first"><%= k.name.titleize %> todos</h4>
            <br/>
            <% a[k].each do |i| %>
                 <% edi = i.assigned_by == current_user.id %>
-                <div class="row">
-                  <div class="col-md-12">
+                <div class="row row-top">
+                  <div class="col-xs-12 first">
                     <div class="to-do">
                       <div class="well well-sm <%= i.done ? 'complete' : 'to-do' %>">
                         <div class="row row-top row-right todo_container">
-                          <div class="col-md-4">
-                            <span style='font-size: 1.5em;'>
+                          <div class="col-xs-12">
+                            <span class="pointer" style='font-size: 1.5em;'>
                               <%= best_in_place_if (i.assigned_to == current_user.id),
                                   i,
                                   :done,
@@ -21,21 +21,25 @@
                                                "<span data-state='fill'>&#x2611;</span>".html_safe],
                                   classes: "todo_checkbox"  %>
                             </span>
-                            <strong class="todo-text">
-                              <%= best_in_place_if (edi),i,
-                                  :title,
-                                  type: "textarea" %>
-                            </strong>
+                            <div class="todo-head">
+                              <strong class="todo-text">
+                                <%= best_in_place_if (edi),i,
+                                    :title,
+                                    type: "textarea" %>
+                              </strong>
+                            </div>
                           </div>
-                          <div class="col-md-4 text-center">
-                            <small>By: <%= (link_to i._ass_by.name,i._ass_by) rescue "Unknown" %> </small>
-                          </div>
-                          <div class="col-md-4 text-right">
-                            <small><%= best_in_place_if (edi),i,
-                                       :duedate,
-                                       :type => :date,
-                                       :display_as => "due" %></small>
-                            <div class="col-md-4 text-right">
+                          <div class="col-xs-12">
+                            <div class="col-xs-5 first">
+                              <small>By: <%= (link_to i._ass_by.name,i._ass_by) rescue "Unknown" %> </small>
+                            </div>
+                            <div class="col-xs-6">
+                              <small><%= best_in_place_if (edi),i,
+                                         :duedate,
+                                         :type => :date,
+                                         :display_as => "due" %></small>
+                            </div>
+                            <div class="col-xs-1 text-right">
                             <% if edi %>
                                 <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe,
                                 i,
