--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,10 +1,10 @@
 <!-- todos index -->
 
 <div class="row row-top row-right">
-  <div class="col-md-7">
+  <div class="col-xs-6">
     <h3>Todos</h3>
   </div>
-  <div class="col-md-5">
+  <div class="col-xs-6">
     <div class="form-group form-last pull-right">
       <%= link_to "Sync my Todos with Google Tasks",
                   '/todos/start_sync',
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<div class="col-md-3">
+<div class="col-xs-3">
   <div class="row">
     <div class="well well-sm filter-well">
       <h4>Filter</h4>
@@ -58,41 +58,44 @@
     </div>
   </div>
 </div>
-<div class="col-md-9">
+<div class="col-xs-9">
   <div class="row row-right add-todo">
-    <%= form_for(Todo.new, html: {class: "form-inline"}) do |g| %>
+    <%= form_for(Todo.new, html: {class: "form"}) do |g| %>
     <%= g.hidden_field :assigned_by, value: current_user.id %>
       <div class="to-do">
         <div class="form-group">
-          <%= g.text_field :title,{placeholder: "Add a todo", class: "form-control", size: 45} %>
+          <%= g.text_field :title,{placeholder: "Add a todo", class: "form-control", size: ''} %>
         </div>
-        <div class="form-group">
-          <%= g.collection_select :topic_id,
-                        TodoTopic.order(:name),
-                        :id,
-                        :name,
-                        {prompt: "-topic-"},
-                        {class: "form-control"} %>
-        </div>
-        <div class="form-group">
-           <%= g.collection_select :assigned_to,
-                            User.order(:first_name),
-                            :id,
-                            :first_name,
-                            {prompt: "-assign to-"},
-                            {class: "form-control"} %>
-        </div>
-        <div class="form-group">
-          <%= g.text_field :duedate,{placeholder: "due on",class: "datepicker form-control", size: "15"} %>
-        </div>
-        <div class="form-group pull-right">
-          <%= g.submit "Add", {class: "btn btn-primary"} %>
+        <div class="form-inline">
+
+          <div class="form-group">
+            <%= g.collection_select :topic_id,
+                          TodoTopic.order(:name),
+                          :id,
+                          :name,
+                          {prompt: "-topic-"},
+                          {class: "form-control"} %>
+          </div>
+          <div class="form-group">
+             <%= g.collection_select :assigned_to,
+                              User.order(:first_name),
+                              :id,
+                              :first_name,
+                              {prompt: "-assign to-"},
+                              {class: "form-control"} %>
+          </div>
+          <div class="form-group">
+            <%= g.text_field :duedate,{placeholder: "due on",class: "datepicker form-control", size: "15"} %>
+          </div>
+          <div class="form-group pull-right">
+            <%= g.submit "Add", {class: "btn btn-primary"} %>
+          </div>
         </div>
       </div>
     <% end %>
   </div>
 
-  <div class="row">
+  <div class="row row-right">
     <div id="show-todos">
      <%= render 'show' %>
     </div>
@@ -110,12 +113,10 @@
 
   $('span.todo_checkbox').on("click",function(){
       if ($(this).find('span').data('state') == 'fill'){
-        e = $(this).parent().parent().parent().parent();
-        e.removeClass("complete");
+        e = $(this).parents('.well').removeClass("complete");
        }
       else if ($(this).find('span').data('state') == 'empty'){
-        e = $(this).parent().parent().parent().parent();
-        e.addClass("complete");
+        e = $(this).parents('.well').addClass("complete");
        }
   });
   $(".best_in_place").best_in_place();
