datatables some changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
 *= require fullcalendar
 *= require token-input-bootstrappy
 *= require jquery-ui-datepicker
+*= require slider
 *= require custom
 
 */
