--- a/app/views/registrations/_status_diagrams.erb
+++ b/app/views/registrations/_status_diagrams.erb
@@ -7,7 +7,7 @@
                <%= image_tag((u.image? ? u.image_url : "/images/icons/user.png"),
                                    {width: "40",
                                     class: "imgb fl",
-                                    style: "margin-right:10px;"}) %>
+                                    style: "margin-right:10px;"}) rescue "User Deleted!" %>
                <span style="padding-top:10px;padding-right:100px;">
                     <%= sd.application_status.name rescue "Unknown Status" %>
                    <br/>
@@ -15,7 +15,7 @@
                     at <%= sd.created_at.strftime("%e-%m-%Y %H:%M %p") %>
                    </span>
                    <br/>
-                   <%= link_to u.name,u %> 
+                   <%= link_to u.name,u  rescue "User Deleted!" %> 
                
                </span>
                <div class="brg0"></div>
