--- a/app/views/shared/_condition_fields.html.erb
+++ b/app/views/shared/_condition_fields.html.erb
@@ -2,7 +2,8 @@
   <div class="col-md-12">
   <%= f.attribute_fields do |a| %>
     <div class="col-sm-2">
-      <%= a.attribute_select({associations: [:branch,:status,:contact_type]},{class: "form-control"}) %>
+      
+      <%= a.attribute_select({associations: [:branch,:status,:contact_type,:institutions,:fee,:institution_country]},{class: "form-control"}) %>
     </div>
   <% end %>
   <div class="col-sm-3">
