--- a/app/views/shared/_core_listing.html.erb
+++ b/app/views/shared/_core_listing.html.erb
@@ -3,7 +3,11 @@
 <% model_pl = model.downcase.pluralize %>
 
 <% _id =  (@status || "all") + "_" + model_pl %>
-<% url = [model_pl + "_url",format: "json"]%>
+<% if model == "Programme" %>
+  <% url = "/institution_programmes/#{@institution_id}.json" %>
+<% else %>
+  <% url = send(model_pl + "_url",format: "json") %>
+<% end %>
 <% srch_url = send("search_" + model_pl + "_path") %>
 <% act = act || model_pl %>
 
@@ -121,8 +125,9 @@
                                                                   
               <div class="row">
                   <h5 class="col-sm-2">Filter By</h5>
-                  
+
                   <%= f.condition_fields do |c| %>
+                    
                     <%= render "shared/condition_fields", f: c %>
                   <% end %>
                   <%= link_to_add_fields '<span class="glyphicon glyphicon-plus col-sm-3"></span>'.html_safe,
@@ -149,7 +154,7 @@
        </div>
        <!-----------------------Ransack Filter End---------------------------->
 
-<table id='<%= _id %>' cellpadding="0" cellspacing="0" border="0" class="table table-hover" data-source="<%= send(url[0],url[1]) %>">
+<table id='<%= _id %>' cellpadding="0" cellspacing="0" border="0" class="table table-hover" data-source="<%= url %>">
 <thead>
   <tr>
       <th>
